DTSPB-4434 Executor details defaulting changes